dumb fixing the space between navbar items by adding a 0.5rem and adding a flex-end to avoid overflowing

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -44,6 +44,11 @@ html {
   border-bottom: 1px solid lightgrey;
 }
 
+.nav-item-text {
+  /* dumb way to fix the problem to emulate the navbar scss from react bootstrap */
+  padding: 0.5rem;
+}
+
 .nav-text {
   color: white;
 }
